assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Lato&family=Pangolin&display=swap');


html,body{
    font-family: 'Lato', sans-serif;
    margin: 0;
    overflow-x: hidden;
}

h2,h1, .h2{
    text-align: center;
    font-family: 'pangolin', cursive;
    color:#A61774;
    font-weight: 800;
    letter-spacing: 4px;
    font-size: 300%;
    text-shadow:2px 2px 3px rgba(0,0,0,0.6);

    
}

/*----------------------------------------------------------------Colors*/
.navbar-color-purple, .fa-facebook{
    background-color: #E1259F;
}
.navbar-color-yellow, .fa-twitter, .btn-light-blue{
    background-color: #E2C72D;
}
.navbar-color-green, .fa-whatsapp{
    background-color: #00BD42;
}
#iu-color-gallery, .fa-facebook-messenger, .navbar-toggler-icon{
    background-color: #213EE0;
}

a{
    color: #fff;
    font-weight: 500;
    font-size: 150%;
}
/*----------------------------------------------------------------Bootstrap NavBar*/
.navbar-brand{
float: left;
font-size: 60px;
text-transform: capitalize;
text-align: justify;
padding-left: 5px;
padding-top: 10px;
font-family: 'Pangolin', cursive;
color: #17a649;
font-weight: 700;
letter-spacing: 4px ;
text-shadow: 0px 2px 0px #b2a98f,
             0px 5px 10px rgba(0,0,0,0.15),
             0px 10px 2px rgba(0,0,0,0.1),
             0px 15px 30px rgba(0,0,0,0.1);
         

         

}

.navbar-color-purple{
    padding-left:13px;
    padding-right:8px;
}

.navbar-color-green{
    padding-left:3px;
    padding-right:5px;
}

/*---------------------------------------------------------------Hero*/
#hero-image{
    height:600px;
    width: 100%;
    background: url("../img/children-holding-hands-final-blue.jpg") no-repeat center center;

    animation-name: hero-zoom;
    animation-duration: 5s;
    animation-fill-mode: forwards;
}

#hero-outer{
    height:600px;
    width: 100%;
    overflow: hidden;
    position: relative;
}

@keyframes hero-zoom {
    from{
        transform: scale(1);
    }
    to{
        transform: scale(1.1);
    }
}
/*----------------------------------------------------------------timetable*/
#timetable{
    background-image: url("../img/stationary.jpg");
    background-repeat: no-repeat;
    background-size: cover;
    background-position:center;
    width:100%;
    overflow: hidden;

}

#timetable div{
    color: #fafafa;
    background-color: rgba(0,0,0, .4);
    width: 19.25%;
    height:300px;
    float: left;
    text-align: center;
    margin: 1px 4px 1px 7px;
    text-shadow:2px 2px 3px rgba(0,0,0,0.7);
}

div h3{
    font-family: 'pangolin', cursive;
    letter-spacing: 5px;
    font-weight: bold;
    text-shadow:2px 2px 3px rgba(0,0,0,0.8);
    


    
}

.scallop-up{
  height:100px;
  width:100%;
  background: -webkit-gradient(radial, 50% 100%, 10, 50% 100%, 40, from(#E2C72D), color-stop(0.49, #E2C72D), color-stop(0.51, #fff), to(white));
-webkit-background-size: 49px 100%;
}

.scallop-down{
  height:70px;
  width:100%;
  background: -webkit-gradient(radial, 50% 0, 10, 50% 0, 40, from(#E2C72D), color-stop(0.49, #E2C72D), color-stop(0.51,white), to(white));
-webkit-background-size: 49px 100%;
}

/*----------------------------------------------------------------wraparound and session details*/
#wraparound, h2{
    text-align: center;
    margin-top:0;
    margin-bottom: 0px;
    background-color: #E2C72D;

}

#wraparound h3{
    color: white;
    margin-bottom: 0px;
    font-family: "lato",sans-serif;
    text-shadow:2px 2px 2px rgba(0,0,0,0.8);
}

#wraparound h5{
    color:white;
    text-shadow:2px 2px 2px rgba(0,0,0,0.6);
}
#wraparound li{
    text-align:center;
    list-style: none;
    display: inherit;

    /* position: relative; this does not work*/
    
}

#wraparound ul{
    margin-bottom: 0;
    margin-top: 30px;
    padding-left: 0;
    
     /* position: relative; this does not work*/
    
    
}

div i{
    padding-right: 15px;
    text-shadow:2px 2px 2px rgba(0,0,0,0.3);
    font-size: 150%;
    padding-top:20px;
    

}
.fa-hourglass-start, .fa-envelope{
    color:#A61774;
}
.fa-hourglass-half, .fa-user, .fa-phone{
    color:#74A617;
}
.fa-hourglass, .blue, .fa-pencil-alt{
   color:#1774A6;
}

.fa-tag{
    color:#E2C72D;
}
/*----------------------------------------------------------------middle section*/

.summary{
    margin-top: 20px;
    padding-top: 10px;
}
.summary h3, .h3{
    color: #1774A6;
    text-align: center;
    position: relative;
}

.summary h2{
    padding-bottom: 0%;
    margin-bottom: 0%;
    text-shadow:2px 2px 3px rgba(0,0,0,0.6);
    text-align: center;
    background-color: white;
}

.descriptive-text {
    text-align: justify;
    margin-top: 30px;
    color:rgba(0,0,0,0.6);
    width: 50%;
    margin-left: 25%;

    
    
    
}


/*----------------------------------------------------------------footer*/
footer{
    height:150px;
    text-align: center;
    background-color:white

}


.social-networks li{
    display:inline;

}

.social-networks i{
    font-size: 160%;
    margin:5px;
    padding: 1%;
    border-radius: 25px;

    
}
/*----------------------------------------------------------------form + maps*/

.form-group{
    height:50%;
    background-color: #1774A6;
}

/*----------------------------------------------------------------Responsive design*/
@media screen and (max-width: 1396px) {

    #timetable div {
        width: 100%;
        clear: both;
        height:150%;
        border-style: solid;
        border-bottom-width: 1px;
        border-bottom-color: rgb(179, 175, 175); 
        padding: 0;
    }



}

 
@media screen and (max-width: 600px){
    .navbar-brand {
        font-size: 30px;
        padding-left: 0px;
        float:left;
    }
}


@media screen and (max-width: 347px){
    .navbar-brand {
        font-size: 22px;
        padding-left: 0px;
        float:left;
    }
}









/*  custom CSS */
.nav-pills {
    margin-right: 200px;
}

.navbar {
    color:black;
}

#cover-text h3 {
    color: black;
}

.show-me { 
    
    color:black !important;
    z-index: 2;
}

/*----------------------------------contact us---------*/

.map-container-6{
overflow:hidden;
padding-bottom:56.25%;
position:relative;
height:0;
}
.map-container-6 iframe{
left:0;
top:0;
height:100%;
width:100%;
position:absolute;
}

